# multiagentsapp

./: .gitignore
alembic/: env.py
backend/: README.md  package-lock.json  package.json  pyproject.toml
backend/app/: clients.py  main.py  setup.py  start_server.bat
backend/app/agents/: agent_manager.py
backend/app/agents/ai_agents/: ai_agent_search.py  prompts.py  snapshot_operations.py  web_operations.py
backend/app/db/: create_table.sql  models.py  session.py
frontend/react_app/: package-lock.json  package.json
frontend/react_app/public/: index.html
frontend/react_app/src/: App.css  App.js
frontend/react_app/src/Components/: SpinningLogo.js
